force-app/main/default/objects/leaseworks__Interest_Rate_Tier__c/leaseworks__Interest_Rate_Tier__c.object-meta.xml
<CustomObject>
    <label>Interest Rate Tier</label>
    <nameField>
        <label>Interest Rate Tier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interest Rate Tiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>