force-app/main/default/objects/leaseworks__Interest_Rate_Tier__c/fields/leaseworks__End_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__End_Date__c</fullName>
    <description>The End Date of the interest rate tier.</description>
    <inlineHelpText>The End Date of the interest rate tier.</inlineHelpText>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>