force-app/main/default/objects/leaseworks__Interest_Rate_Tier__c/fields/leaseworks__Fixed_Rate__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Fixed_Rate__c</fullName>
    <description>Fixed interest rate applicable for the tier being defined.</description>
    <inlineHelpText>Enter fixed interest rate applicable to this tier.</inlineHelpText>
    <label>Fixed Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>