force-app/main/default/objects/leaseworks__Interest_Rate_Tier__c/fields/leaseworks__Floating_Rate__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Floating_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select Floating interest rate index (e.g.LIBOR,SOFR) applicable to this tier. Variable rates will be determined based on the selected index.</description>
    <inlineHelpText>Select the interest rate index (e.g.LIBOR,SOFR) applicable to this tier.</inlineHelpText>
    <label>Floating Rate</label>
    <referenceTo>leaseworks__Interest_Rate_Index__c</referenceTo>
    <relationshipLabel>Interest Rate Tiers</relationshipLabel>
    <relationshipName>Interest_Rate_Tiers</relationshipName>
    <type>Lookup</type>
</CustomField>