force-app/main/default/objects/leaseworks__Interest_Rate_Tier__c/fields/leaseworks__Lease__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lease__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Displays contract associated with this Interest Rate Tier.</inlineHelpText>
    <label>Lease</label>
    <referenceTo>leaseworks__Lease__c</referenceTo>
    <relationshipLabel>Interest Rate Tiers</relationshipLabel>
    <relationshipName>Interest_Rate_Tiers</relationshipName>
    <type>Lookup</type>
</CustomField>