force-app/main/default/objects/leaseworks__Interest_Rate_Tier__c/fields/leaseworks__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Start_Date__c</fullName>
    <description>Enter the &#39;Start Date&#39; of the interest rate tier. Invoices delinquent within this interest period will use the entered interest rate(s).</description>
    <inlineHelpText>Enter the &#39;Start Date&#39; of the interest rate tier. Invoices delinquent within this interest period will use the entered interest rate(s).</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>