force-app/main/default/objects/leaseworks__Interest_Rate_Tier__c/validationRules/leaseworks__Either_Fix_Or_Float_Rate_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Either_Fix_Or_Float_Rate_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

ISBLANK( leaseworks__Fixed_Rate__c ),

ISBLANK( leaseworks__Floating_Rate__c )

)</errorConditionFormula>
    <errorMessage>Please enter the applicable interest rate for the selected period. The interest rate can be specified as either fixed, floating, or a combination of both</errorMessage>
</ValidationRule>