force-app/main/default/objects/leaseworks__Interest_Rate_Tier__c/validationRules/leaseworks__End_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__End_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>leaseworks__End_Date__c &gt; leaseworks__Lease__r.leaseworks__Lease_End_Date_New__c</errorConditionFormula>
    <errorDisplayField>leaseworks__End_Date__c</errorDisplayField>
    <errorMessage>The End date cannot be after the lease end date.</errorMessage>
</ValidationRule>