force-app/main/default/objects/leaseworks__Interest_Rate_Tier__c/validationRules/leaseworks__Enddate_NotBefore_Startdate.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Enddate_NotBefore_Startdate</fullName>
    <active>true</active>
    <description>End date cannot be before the lease start date.</description>
    <errorConditionFormula>leaseworks__End_Date__c &lt; leaseworks__Lease__r.leaseworks__Lease_Start_Date_New__c</errorConditionFormula>
    <errorDisplayField>leaseworks__End_Date__c</errorDisplayField>
    <errorMessage>The End date cannot be before the lease start date.</errorMessage>
</ValidationRule>