force-app/main/default/objects/leaseworks__Interest_Rate_Tier__c/validationRules/leaseworks__Enddate_Startdate.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Enddate_Startdate</fullName>
    <active>true</active>
    <errorConditionFormula>leaseworks__End_Date__c  &lt;  leaseworks__Start_Date__c</errorConditionFormula>
    <errorDisplayField>leaseworks__End_Date__c</errorDisplayField>
    <errorMessage>End Date cannot be prior to Start Date.</errorMessage>
</ValidationRule>