force-app/main/default/objects/leaseworks__Interest_Rate_Tier__c/validationRules/leaseworks__Negative_Fixed_Rate.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Negative_Fixed_Rate</fullName>
    <active>true</active>
    <description>Fixed rate can&#39;t be negative.</description>
    <errorConditionFormula>leaseworks__Fixed_Rate__c  &lt; 0</errorConditionFormula>
    <errorDisplayField>leaseworks__Fixed_Rate__c</errorDisplayField>
    <errorMessage>Fixed rate can&#39;t have negative value.</errorMessage>
</ValidationRule>