force-app/main/default/objects/leaseworks__Interest_Rate_Tier__c/validationRules/leaseworks__Start_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Start_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>leaseworks__Start_Date__c &lt;  leaseworks__Lease__r.leaseworks__Lease_Start_Date_New__c</errorConditionFormula>
    <errorDisplayField>leaseworks__Start_Date__c</errorDisplayField>
    <errorMessage>The Start date cannot be before the lease start date.</errorMessage>
</ValidationRule>