force-app/main/default/objects/leaseworks__Interest_Rate_Tier__c/validationRules/leaseworks__StartDate_NotAfter_EndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__StartDate_NotAfter_EndDate</fullName>
    <active>true</active>
    <description>Start date should not be after the Lease End date</description>
    <errorConditionFormula>leaseworks__Start_Date__c &gt;= leaseworks__Lease__r.leaseworks__Lease_End_Date_New__c</errorConditionFormula>
    <errorDisplayField>leaseworks__Start_Date__c</errorDisplayField>
    <errorMessage>The Start date cannot be after the lease end date.</errorMessage>
</ValidationRule>